Jan 23, 2015 - chris ---------------------------------------------------
o Fixed FreeBSD compilation errors (thanks, Heping Wen)

Jan 22, 2015 - chris ---------------------------------------------------
o Added Cursor.TryFind to hamsterdb-dotnet
	(thanks, mjmckp <matthew.j.m.peacock@gmail.com>)

Jan 02, 2015 - chris ---------------------------------------------------
o issue #44: approx. matching returned the wrong key (thanks, Joel
	Jacobson)

Dec 30, 2014 - chris ---------------------------------------------------
o issue #43: fixed segfault when flushing transactions (thanks, Joel
	Jacobson)

Dec 15, 2014 - chris ---------------------------------------------------
o Implemented ham_cursor_get_record_size() for remote access

Dec 12, 2014 - chris ---------------------------------------------------
o Deprecated HAM_RECORD_NUMBER (use HAM_RECORD_NUMBER64 instead);
	introduced a new flag HAM_RECORD_NUMBER32 for 32bit record numbers

Dec 05, 2014 - chris ---------------------------------------------------
o Added a new parameter HAM_PARAM_POSIX_FADVISE (thanks, Thomas Fähnle)

Nov 28, 2014 - chris ---------------------------------------------------
o Fixed large file support on linux (thanks, Thomas Fähnle)

Nov 27, 2014 - chris ---------------------------------------------------
o Removed dependency to malloc.h
o issue #42: ham_cursor_find returned wrong key w/ approx. matching and
	transactions

Nov 21, 2014 - chris ---------------------------------------------------
o Fixed compilation error on OSX (thanks, Daniel Lemire)

Nov 20, 2014 - chris ---------------------------------------------------
o Fixed compilation error on debian Wheezy, gcc 4.7.2, 32bit (thanks,
	Thomas Fähnle)

Nov 17, 2014 - chris ---------------------------------------------------
o The macro HAM_API_REVISION is now deprecated; use HAM_VERSION_* instead

Nov 16, 2014 - chris ---------------------------------------------------
o The github wiki is now linked into documentation/wiki
