@@ -5,6 +5,10 @@ Jan 22, 2015 - chris ---------------------------------------------------
 o Added Cursor.TryFind to hamsterdb-dotnet
 	(thanks, mjmckp <matthew.j.m.peacock@gmail.com>)
 
+Jan 09, 2015 - chris ---------------------------------------------------
+o issue #45: fixed segfault in Journal recovery (thanks, Michael
+	Moellney)
+
 Jan 02, 2015 - chris ---------------------------------------------------
 o issue #44: approx. matching returned the wrong key (thanks, Joel
 	Jacobson)
